# APA_FINAL

./: .gitignore  README.md  notebook_final copy.ipynb  notebook_final.ipynb  pyproject.toml  requirements.txt
code/: class_imbalance.py  notebook_final.ipynb  notebook_final_old.ipynb  preproceso.py  robot_dataset.csv
dataset/: robot_dataset.csv
prestudio/: robot_dataset.ipynb
