[project]
name = "apa-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dill>=0.4.0",
    "dotenv",
    "huggingface-hub",
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "seaborn",
    "sentence-transformers>=5.1.2",
    "torch",
    "torchvision",
    "tqdm",
    "transformers>=4.57.3",
    "yellowbrick",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
